Prevent our UI from overlapping IMA's overlay (#2236)
* Set control bar icon height to 30px when ima plays on small player JW8-301

--- a/src/css/controls/flags/ads.less
+++ b/src/css/controls/flags/ads.less
@@ -98,6 +98,12 @@
             pointer-events: none;
         }
     }
+
+    &.jw-flag-small-player {
+        .jw-controlbar .jw-icon {
+            height: 30px;
+        }
+    }
 }
 
 .jwplayer.jw-flag-ads-vpaid,
